--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ log = "0.4.14"
 env_logger = "0.9.0"
 rocket = "0.5.0-rc.1"
 config = "0.11.0"
+num = "0.3"
+num-traits = "0.2.14"
+num-derive = "0.3.3"
 
 [target.x86_64-unknown-linux-musl.dependencies]
 openssl = { version = "0.10.38", features = ["vendored"] }
